--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ p {
   color: #fff;
   padding: 0.8rem 1.6rem;
   display: inline-block;
+  transition: all 0.3s ease;
 }
 .btn:hover {
   background-color: #ccc;
@@ -93,6 +94,7 @@ p {
 
 .navbar-drop {
   position: relative;
+  transition: all 0.3s ease;
 }
 .navbar-drop:hover .subnav {
   display: block;
@@ -103,6 +105,7 @@ p {
 }
 
 .subnav {
+  transition: all 0.5s ease;
   position: absolute;
   background-color: #fff;
   color: #000;
