--- a/style.scss
+++ b/style.scss
@@ -41,6 +41,7 @@ p {
   color: #fff;
   padding: 0.8rem 1.6rem;
   display: inline-block;
+  transition: all 0.3s ease;
 
   &:hover {
     background-color: #ccc;
@@ -101,6 +102,7 @@ p {
 }
 .navbar-drop {
   position: relative;
+  transition: all 0.3s ease;
 
   &:hover .subnav {
     display: block;
@@ -112,6 +114,7 @@ p {
   }
 }
 .subnav {
+  transition: all 0.5s ease;
   position: absolute;
   background-color: #fff;
   color: #000;
